# retail-clv-project

./: .gitignore  01_data_loading.ipynb  02_eda.ipynb  03_rfm.ipynb  04_churn_model.ipynb  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: 01_data_loading-checkpoint.ipynb
Data/: dashboard_data.csv  rfm_segments.csv
dashboard/: retail_dashboard.pbix
